# bricks

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
samples/: complex_program.nqc  run_motor.nqc
src/: argparse.rs  main.rs  rcx.rs
src/powered_up/: mod.rs  scan.rs
src/rcx/: binfmt.rs
