[package]
name = "bricks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# btleplug = "0.10"
clap = { version = "4", features = ["derive", "cargo", "string"] }
color-eyre = "0.6"
futures = "0.3"
lego-powered-up = "0.3"
lazy_static = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
uuid = "1"
