[package]
name = "bricks"
version = "0.1.0"
edition = "2021"
authors = ["David Young <david@thedavidyoung.co.uk>"]
license = "MPL-2.0"
repository = "https://github.com/bricks-rs/bricks"
readme = "README.md"
description = "CLI utility for interacting with Lego programmable bricks. Most functionality still WIP"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lego-powered-up = "0.4"
clap = { version = "4", features = ["derive", "cargo", "string"] }
color-eyre = "0.6"
futures = "0.3"
lazy_static = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
uuid = "1"
rcx = "0.1.2"
nom = "7.1.3"
hex = "0.4.3"

[dev-dependencies]
hex-literal = "0.4.1"

# [dependencies.lego-powered-up]
# version = "0.3"
# path = "../lego-powered-up/lego-powered-up"

# [patch.crates-io]
# rcx = { path = "../rcx/rcx" }
